# not-a-package-manager

./: README.md  pyproject.toml
napm/: __init__.py  config.py  pseudo_install.py  remove.py  update.py  utils.py  warmup.py
tests/: test_pseudo_install.py  test_remove.py  test_update.py
