[tool.poetry]
name = "napm"
version = "1.0.1"
description = "Not A Package Manager."
authors = ["David Marx <david.marx84@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.27.1"
gdown = "^4.4.0"
omegaconf = "^2.1.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
